{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "2786131d-d535-435c-830f-b3d3cd04dc5f",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "609d48c7-1152-4e50-ab3f-99ae7e780093",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a1ac9830-c598-4ed6-92d6-b79bc6e827a3",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}